# quickjs-wasm-near

./: .gitignore  .gitpod.yml  Makefile  README.md  build.sh  libjseval.c  quickjs.c  quickjs.h  runwasm.html  runwasm.js  runwasm.mjs  wasi.js  wasi.mjs  wasmlib.c
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: main.yml
jsinrustcontract/: Cargo.toml  README.md  build.sh
jsinrustcontract/src/: lib.rs
showcase/: closeprotocol.component.html  closeprotocol.component.js  closeprotocol.html  contract.js  synth.js
showcase/closeprotocol/: closeprotocol.component.js  contract.js
showcase/sdk-js-apidemo1/: contract.js  index.html
showcase/web4nft/: README.md  contract.js  index.html
wasmlib/: build.sh  libjseval.c  wasmlib.c
web/: .gitignore  app.component.css  app.component.css.js  app.component.html  app.component.html.js  app.component.js  app.component.spec.js  create-dev-account.js  importmap.js  importmap.json  importmapgenerator.js  index.html  karma.conf.cjs  main.js  near.js  package-lock.json  package.json  rollup.config.js  runwasm.js  serviceworker.js  web-test-runner.config.js
web/callcontract/: callcontract-page.component.css.js  callcontract-page.component.html  callcontract-page.component.html.js  callcontract-page.component.js  callcontractstandalone-page.component.html  callcontractstandalone-page.component.js
web/code-editor/: args-editor.component.html.js  args-editor.component.js  code-editor.component.html  code-editor.component.html.js  code-editor.component.js  code-page.component.css  code-page.component.css.js  (+6 more)
(+31 files in other folders)
